cmake_minimum_required(VERSION 3.6)

set(LIB_NAME async)
set(LIB_INCLUDES async.h)

#file(GLOB_RECURSE SOURCES *.cpp *.h)
set(SOURCES async.cpp async.h)

add_library(${LIB_NAME} ${SOURCES} )

set_target_properties(
        ${LIB_NAME} PROPERTIES
        CXX_STANDARD 14
        CXX_STANDARD_REQUIRED ON
)

target_link_libraries(${LIB_NAME} ${CMAKE_THREAD_LIBS_INIT})

set(LIB_VERSION_MAJOR 0)
set(LIB_VERSION_MINOR 1)
set(LIB_VERSION_PATCH 1)
set(LIB_VERSION_STRING ${LIB_VERSION_MAJOR}.${LIB_VERSION_MINOR}.${LIB_VERSION_PATCH})

set_target_properties(${LIB_NAME} PROPERTIES VERSION ${LIB_VERSION_STRING} SOVERSION ${LIB_VERSION_MAJOR})

install(TARGETS ${LIB_NAME} DESTINATION lib)
install(FILES ${LIB_INCLUDES} DESTINATION include)
